--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
 </body>
 
 <template name="ytHeader">
-	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<h1>{{_ "title"}}</h1>
 			</div>
-			<div class="col-md-12">
+			<div class="col-md-12 desc">
 				{{_ "desc"}}
 			</div>
 		</div>
-	</div>
 </template>
 
 <template name="ytFooter">
