--- a/packages/yt-layout/layout.html
+++ b/packages/yt-layout/layout.html
@@ -1,13 +1,15 @@
 <template name="ytLayout">
-	<header>
-		{{> yield region='header'}}
-	</header>
+	<div class="container">
+		<header>
+			{{> yield region='header'}}
+		</header>
 
-	<div class="content">
-		{{> yield}}
+		<div class="content">
+			{{> yield}}
+		</div>
+
+		<footer>
+			{{> yield region='footer'}}
+		</footer>
 	</div>
-
-	<footer>
-		{{> yield region='footer'}}
-	</footer>
 </template>
