--- a/home.html
+++ b/home.html
@@ -1,10 +1,3 @@
 <template name="ytHome">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="searchForm form-inline">
-					<input type="text" class="query form-control" placeholder="{{_ 'placeholder'}}">
-					<button class="btn btn-primary btn-lg search-button"><i class="fa fa-search"></i> {{_ "search"}}</button>
-				</div>
-			</div>
-		</div>
+	{{> ytSearch}}
 </template>
