--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </body>
 
 <template name="ytHeader">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<h1>{{_ "title"}}</h1>
@@ -29,6 +30,7 @@
 				{{_ "desc"}}
 			</div>
 		</div>
+	</div>
 </template>
 
 <template name="ytFooter">
