--- a/client/search.html
+++ b/client/search.html
@@ -1,4 +1,12 @@
 <template name="ytSearch">
+	<div class="country-flag">
+		<div class="flag-third blue">
+		</div>
+		<div class="flag-third white">
+		</div>
+		<div class="flag-third red">
+		</div>
+	</div>
 	<div class="search-bar">
 		<div class="container">
 			<div class="row">
