--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>{{_ "title"}}</h1>
+				<a href="/"><h1>{{_ "title"}}</h1></a>
 			</div>
 			<div class="col-md-12 desc">
 				{{_ "desc"}}
