examples and footer

--- a/home.html
+++ b/home.html
@@ -1,3 +1,10 @@
 <template name="ytHome">
 	{{> ytSearch}}
+	<div class="container">
+		<div class="row">
+			<div class="examples">
+			{{_ "see_examples" }} <a href="/pronounce/on+verra+bien" class="hvr-underline-from-left">on verra bien</a> <a href="/pronounce/parler" class="hvr-underline-from-left">parler</a> <a href="/pronounce/l'île" class="hvr-underline-from-left">l'île</a>
+			</div>
+		</div>
+	</div>
 </template>
