--- a/index.html
+++ b/index.html
@@ -34,4 +34,10 @@
 </template>
 
 <template name="ytFooter">
+	<div class="container">
+		<div class="row">
+			<a href="#">{{_ "about"}}</a>
+			<a href="#">{{_ "donate"}}</a>
+		</div>
+	</div>
 </template>
