helper keyboard styling

--- a/client/search.html
+++ b/client/search.html
@@ -16,7 +16,7 @@
 						<button class="btn btn-primary btn-lg search-button"><i class="fa fa-search"></i> {{_ "search"}}</button>
 						<div class="helper-keyboard">
 							{{#each char}}
-								<a href="#" class="char-picker">{{this}}</a>
+								<a href="#" class="char-picker hvr-fade">{{this}}</a>
 							{{/each}}
 						</div>
 					</div>
