--- a/client/footer.html
+++ b/client/footer.html
@@ -2,12 +2,16 @@
 	<div class="container">
 		<div class="row">
 			<a href="#">{{_ "about"}}</a>
-			<a href="#">{{_ "donate"}}</a>
 
 			<span class="pull-right lang-picker">
 				<a href="#" data-lang="fr" class="{{#if isActiveLang 'fr'}}active{{/if}}">{{_ "french"}}</a>
 				<a href="#" data-lang="en" class="{{#if isActiveLang 'en'}}active{{/if}}">{{_ "english"}}</a>
+
+				{{#unless hideCoffee}}
+					<a href="#donateModal" class="donate" data-toggle="modal"><i class="fa fa-coffee"></i></a>
+				{{/unless}}
 			</span>
 		</div>
 	</div>
+	{{> ytDonateModal}}
 </template>
