--- a/client/footer.html
+++ b/client/footer.html
@@ -1,7 +1,7 @@
 <template name="ytFooter">
 	<div class="container">
 		<div class="row">
-			<a href="#">{{_ "about"}}</a>
+			<a href="#"><strong>{{_ "about"}}</strong></a>
 
 			<span class="pull-right lang-picker">
 				<a href="#" data-lang="fr" class="{{#if isActiveLang 'fr'}}active{{/if}}">{{_ "french"}}</a>
