responsive home page

--- a/client/search.html
+++ b/client/search.html
@@ -13,7 +13,7 @@
 				<div class="col-md-12">
 					<div class="searchForm form-inline">
 						<input type="text" class="query form-control" placeholder="{{_ 'placeholder'}}" value="{{getCurrentQuery}}">
-						<button class="btn btn-primary btn-lg search-button"><i class="fa fa-search"></i> {{_ "search"}}</button>
+						<button class="btn btn-primary btn-lg search-button"><i class="fa fa-search"></i> <span>{{_ "search"}}</span></button>
 						<div class="helper-keyboard">
 							{{#each char}}
 								<a href="#" class="char-picker hvr-fade">{{this}}</a>
