--- a/client/footer.html
+++ b/client/footer.html
@@ -1,16 +1,18 @@
 <template name="ytFooter">
 	<div class="container">
 		<div class="row">
-			<a href="#"><strong>{{_ "about"}}</strong></a>
+			<div class="col-md-12">
+				<a href="#"><strong>{{_ "about"}}</strong></a>
 
-			<span class="pull-right lang-picker">
-				<a href="#" data-lang="fr" class="{{#if isActiveLang 'fr'}}active{{/if}}">{{_ "french"}}</a>
-				<a href="#" data-lang="en" class="{{#if isActiveLang 'en'}}active{{/if}}">{{_ "english"}}</a>
+				<span class="pull-right lang-picker">
+					<a href="#" data-lang="fr" class="{{#if isActiveLang 'fr'}}active{{/if}}">{{_ "french"}}</a>
+					<a href="#" data-lang="en" class="{{#if isActiveLang 'en'}}active{{/if}}">{{_ "english"}}</a>
 
-				{{#unless hideCoffee}}
-					<a href="#donateModal" class="donate" data-toggle="modal"><i class="fa fa-coffee"></i></a>
-				{{/unless}}
-			</span>
+					{{#unless hideCoffee}}
+						<a href="#donateModal" class="donate" data-toggle="modal"><i class="fa fa-coffee"></i></a>
+					{{/unless}}
+				</span>
+			</div>
 		</div>
 	</div>
 	{{> ytDonateModal}}
