--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 	
 	<link rel="alternate" hreflang="en" href="/lang/en">
 	<link rel="author" href="https://plus.google.com/110491158897816644863">
-
+	
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=352449114950048";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 </head>
 
 <body>
@@ -23,7 +31,8 @@
 <template name="ytHeader">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12 logo-container">
+				{{> ytShareLinks}}
 				<a href="/"><img src="/images/youtube.jpg" class="logo"><h1>{{_ "title"}}</h1></a>
 			</div>
 			<div class="col-md-12 desc">
