use phrases, none lang index, highlight words

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 examples">
-			{{_ "see_examples" }} <a href="/pronounce/on+verra+bien" class="hvr-underline-from-left">on verra bien</a> <a href="/pronounce/parler" class="hvr-underline-from-left">parler</a> <a href="/pronounce/l'île" class="hvr-underline-from-left">l'île</a>
+			{{_ "see_examples" }} <a href="/pronounce/on+verra+bien" class="hvr-underline-from-left">on verra bien</a> <a href="/pronounce/parler" class="hvr-underline-from-left">parler</a> <a href="/pronounce/l'île" class="hvr-underline-from-left">l'île</a> <a href="/pronounce/ça+va" class="hvr-underline-from-left">ça va</a> <a href="/pronounce/mademoiselle" class="hvr-underline-from-left">mademoiselle</a>
 			</div>
 		</div>
 	</div>
