translate route to french

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 			<div class="col-md-12 examples">
 				{{_ "see_examples" }} 
 				{{#each ytExamples}}
-					<a href="/pronounce/{{this}}" class="hvr-underline-from-left">{{this}}</a>
+					<a href="/prononciation/{{this}}" class="hvr-underline-from-left">{{this}}</a>
 				{{/each}}
 			</div>
 		</div>
