--- a/client/footer.html
+++ b/client/footer.html
@@ -2,7 +2,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<a href="#"><strong>{{_ "about"}}</strong></a>
+				<a href="/"><strong>{{_ "home"}}</strong></a> | 
+				<a href="/apropos"><strong>{{_ "about"}}</strong></a>
 
 				<span class="pull-right lang-picker">
 					<a href="#" data-lang="fr" class="{{#if isActiveLang 'fr'}}active{{/if}}">{{_ "french"}}</a>
