fixed share buttons

--- a/client/share.html
+++ b/client/share.html
@@ -1,6 +1,6 @@
 <template name="ytShareLinks">
 	<div class="share-links">
-		<a href="http://twitter.com/home?status=[TITLE]+[URL]" class="hvr-shadow">
+		<a href="http://twitter.com/home?status=I just found brilliant way to learn french pronunciation check it out: +http://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-twitter fa-stack-1x"></i>
@@ -14,21 +14,21 @@
 			</span>
 		</a>
 
-		<a href="https://plus.google.com/share?url=[URL]" class="hvr-shadow">
+		<a href="https://plus.google.com/share?url=http://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-google-plus fa-stack-1x"></i>
 			</span>
 		</a>
 
-		<a href="http://www.tumblr.com/share?v=3&u=[URL]&t=[TITLE]" class="hvr-shadow">
+		<a href="http://www.tumblr.com/share/link?url=http://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-tumblr fa-stack-1x"></i>
 			</span>
 		</a>
 
-		<a href="http://www.linkedin.com/shareArticle?mini=true&url=[URL]&title=[TITLE]&source=[SOURCE/DOMAIN]" class="hvr-shadow">
+		<a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//prononce.me&title=Learn%20french%20pronunciation%20with%20youtube&summary=I%20just%20found%20cool%20way%20to%20learn%20french%20pronunciation.%20Check%20it%20out&source=http%3A//prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-linkedin fa-stack-1x"></i>
