--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta property="og:title" content="Comment ça se prononce en français ?" />
+	<meta property="og:url" content="http://prononce.me" />
+	<meta property="og:type" content="website" />
+	<meta property="og:locale" content="fr" />
+	<meta property="of:image" content="http://adamwolski.com/og-image-prononce-me.jpg" />
+	<meta property="fb:app_id" content="1655764497997143" />
+	<meta property="og:description" content="Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!" />
+	
     <meta name="fragment" content="!">
     
 	<title></title>
@@ -15,12 +23,7 @@
 	<link rel="alternate" hreflang="en" href="/lang/en">
 	<link rel="author" href="https://plus.google.com/110491158897816644863">
 	
-	<meta property="og:title" content="Comment ça se prononce en français ?" />
-	<meta property="og:url" content="http://www.prononce.me" />
-	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="fr" />
-	<meta property="of:image" content="http://adamwolski.com/og-image-prononce-me.jpg" />
-	<meta property="og:description" content="Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!" />
+
 
 	<div id="fb-root"></div>
 	<script>
