--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta property="og:title" content="Comment ça se prononce en français ?" />
 	<meta property="og:url" content="http://prononce.me" />
 	<meta property="og:type" content="website" />
-	<meta property="og:locale" content="fr" />
+	<meta property="og:locale" content="fr_FR" />
+	<meta property="og:locale:alternate" content="en_US" />
 	<meta property="of:image" content="http://adamwolski.com/og-image-prononce-me.jpg" />
 	<meta property="fb:app_id" content="1655764497997143" />
 	<meta property="og:description" content="Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!" />
-	
+
     <meta name="fragment" content="!">
     
 	<title></title>
