fix footer issues

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <template name="ytHome">
 	{{> ytSearch}}
-	<div class="container">
+	<div class="main-content container">
 		<div class="row">
 			<div class="col-md-12 examples">
 				{{_ "see_examples" }} 
