--- a/client/share.html
+++ b/client/share.html
@@ -1,6 +1,6 @@
 <template name="ytShareLinks">
 	<div class="share-links">
-		<a href="http://twitter.com/home?status=I just found brilliant way to learn french pronunciation check it out: +http://prononce.me" target="_blank" class="hvr-shadow">
+		<a href="https://twitter.com/home?status=I just found brilliant way to learn french pronunciation check it out: +https://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-twitter fa-stack-1x"></i>
@@ -14,14 +14,14 @@
 			</span>
 		</a>
 
-		<a href="https://plus.google.com/share?url=http://prononce.me" target="_blank" class="hvr-shadow">
+		<a href="https://plus.google.com/share?url=https://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-google-plus fa-stack-1x"></i>
 			</span>
 		</a>
 
-		<a href="http://www.tumblr.com/share/link?url=http://prononce.me" target="_blank" class="hvr-shadow">
+		<a href="https://www.tumblr.com/share/link?url=https://prononce.me" target="_blank" class="hvr-shadow">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square-o fa-stack-2x"></i>
 				<i class="fa fa-tumblr fa-stack-1x"></i>
