--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta property="og:title" content="Comment ça se prononce en français ?" />
-	<meta property="og:url" content="http://prononce.me" />
+	<meta property="og:url" content="https://prononce.me" />
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="fr_FR" />
 	<meta property="og:locale:alternate" content="en_US" />
-	<meta property="of:image" content="http://adamwolski.com/og-image-prononce-me.jpg" />
+	<meta property="of:image" content="https://adamwolski.com/og-image-prononce-me.jpg" />
 	<meta property="fb:app_id" content="1655764497997143" />
 	<meta property="og:description" content="Utilisez YouTube pour améliorer votre l'accent français. De vraies personnes, des situations réelles, facile et amusant à utiliser. C'est chic!" />
 
